[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ft-lora"
version = "0.1.0"
description = "A tiny OOP wrapper around PEFT for LoRA fine-tuning of causal LMs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Freakwill" }]
dependencies = [
    "torch>=2.0",
    "peft>=0.19",
    "transformers>=4.45",
]

[project.urls]
Homepage = "https://github.com/Freakwill/ft-lora"

[tool.setuptools]
py-modules = ["ft_lora"]
